--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-}
+background-image: url('https://github.com/k-naman/naman/blob/main/images/animation.mp4');}
 ol, ul {
 	list-style: none;
 }
